[TCG-49] Fixed some issues on tablet breakpoint

--- a/components/sleep-wellness/sleep-wellness.scss
+++ b/components/sleep-wellness/sleep-wellness.scss
@@ -1,7 +1,7 @@
 .sleep-wellness-hero-banner {
     flex: 0 0 100%;;
     display: inline-block;
-    
+
     img {
         object-position: center center;
     }
@@ -21,11 +21,19 @@
     }
 
     &__body-text-section {
-        padding: 10px;
-        max-width: 357px;
+        padding: 30px;
 
-        img {
-            max-width: 230px;
+        @include media-breakpoint-up(md){
+            padding-top: 104px 0 0 0;
+            max-width: 357px;
+        }
+    }
+
+    &__logo-header {
+        max-width: 230px;
+
+        @include media-breakpoint-between(md, lg){
+            padding-top: 30px
         }
     }
 
@@ -42,9 +50,24 @@
     &__body-text {
         font-family: $lora-reg;
         flex: 0 0 100%;
+        line-height: 1.63;
+        font-size: 1rem;
+        color: $fblack;
+
+        @include media-breakpoint-between(md,lg){
+            padding: 0 20px;
+        }
     }
 
     &__arrow-section {
         flex: 0 0 100%;
+
+        @include media-breakpoint-up(md){
+            padding-top: 120px;
+        }
+        
+        @include media-breakpoint-up(xl) {
+            padding-top: 200px;
+        }
     }
 }
